Clean up banner background and fix navbar collapse

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,27 +1,22 @@
 .banner {
-    background-image: url("../assets/banner.png");
+    background-image: linear-gradient(rgba(33, 33, 33, 0.5), rgba(33, 33, 33, 0.5)), url("../assets/banner.png");
     background-color: rgba(255, 213, 79, 1);
     background-position-y: center;
 
     border-bottom-color: rgba(255, 213, 79, 1);
     border-bottom-width: 0.5rem;
     border-bottom-style: solid;
-
-    h1 {
-        z-index: 100;
-    }
 }
 
 .inner-banner:before {
     background-color: rgba(33, 33, 33, 1);
     opacity: 0.5;
     display: block;
-    top: 8rem;
+    top: 0;
     content: "";
     left: 0;
     right: 0;
-    height: 20.75rem;
     position: absolute;
     pointer-events: none;
-    z-index: 50;
+    box-sizing: border-box;
 }
