--- a/src/app/layout/top-bar/top-bar.component.scss
+++ b/src/app/layout/top-bar/top-bar.component.scss
@@ -1,4 +1,3 @@
-div.navbar {
-    margin-top: 4rem;
-    height: 4rem;
+nav.navbar {
+    min-height: 4rem;
 }
